metrics: move to psr-4 class structure

--- a/approot/composer.json
+++ b/approot/composer.json
@@ -1,5 +1,10 @@
 {
-    "require": {
+    "autoload": {
+		"psr-4": {
+			"CometPrometheusExporter\\": "src/"
+		}
+	},
+	"require": {
         "cometbackup/comet-php-sdk": "^2.6",
         "ext-curl": "^7.3",
         "jimdo/prometheus_client_php": "^0.9.1"
