vendor: upgrade jimdo/prometheus_client_php from v0.9.1 -> MASTER
Work around an issue with using colons in label names: https://github.com/Jimdo/prometheus_client_php/pull/57

--- a/approot/composer.json
+++ b/approot/composer.json
@@ -7,6 +7,6 @@
 	"require": {
         "cometbackup/comet-php-sdk": "^2.6",
         "ext-curl": "^7.3",
-        "jimdo/prometheus_client_php": "^0.9.1"
+        "jimdo/prometheus_client_php": "dev-master"
     }
 }
